ansible/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32010   # Choose a static port if you want
